# savesync

./: .env.example  .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  savesync_bridge.spec
.github/agents/: savesync-bridge.agent.md
.github/workflows/: cloud-build.yml  release.yml
docs/: TECHNICAL.md  USER_GUIDE.md
scripts/: build_exe.py  fetch_bins.py  package_release.py
src/savesync_bridge/: __init__.py  app.py
src/savesync_bridge/cli/: ludusavi.py  rclone.py
src/savesync_bridge/core/: backup_converter.py  binaries.py  cli_bus.py  config.py  env.py  exceptions.py  game_cache.py  manifest.py  path_translator.py  sync_engine.py
src/savesync_bridge/models/: game.py
src/savesync_bridge/ui/: conflict_dialog.py  main_window.py  settings_dialog.py  theme.py  workers.py
src/savesync_bridge/ui/widgets/: debug_panel.py  game_card.py  game_list.py  status_badge.py
tests/: test_backup_converter.py  test_config.py  test_env.py  test_game_cache.py  test_ludusavi.py  test_manifest.py  test_models.py  test_path_translator.py  test_rclone.py  test_sync_engine.py  test_ui_widgets.py  test_workers.py
