[project]
name = "savesync-bridge"
version = "0.1.1"
description = "A PySide6 GUI that acts as a smart manager for Ludusavi game saves across Windows and Steam Deck."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "Debashis Dip" }]
dependencies = [
    "PySide6>=6.7",
    "python-dotenv>=1.0",
]

[project.scripts]
savesync-bridge = "savesync_bridge.app:main"
app = "savesync_bridge.app:main"
fetch-bins = "scripts.fetch_bins:main"
build-exe = "scripts.build_exe:main"
package-release = "scripts.package_release:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/savesync_bridge", "scripts"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.4",
    "ruff>=0.9",
    "pyinstaller>=6.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["savesync_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
